# gaussquad

./: .gitignore  CMakeLists.txt  README.md  gausslegendre.m  gausslobatto.m  test.m
example/: CMakeLists.txt  quad3_example.cpp  quad_example.cpp
include/gaussquad/: gausslegendre.hpp  gausslobatto.hpp  gaussquad.hpp  quad.hpp  quad3.hpp
test/: CMakeLists.txt  gaussquad_test.cpp
